--- a/complete-react-tutorial/index.html
+++ b/complete-react-tutorial/index.html
@@ -13,12 +13,37 @@
 
     <script type="text/babel">
         class App extends React.Component {
+            state = {
+                name: 'Mike',
+                age: 28
+            };
+
+            handleOnClick(e) {
+                console.log(e.target);
+            }
+
+            handleOnMouseOver(e) {
+                console.log(e.pageX, e.pageY);
+            }
+
+            handleOnCopy(e) {
+                console.log("copy invoked");
+            }
 
             render(){
                 return(
                     <div className="app-content">
-                        <h1>Hello, World!</h1>
-                        <p>{ Math.random() * 10 }</p>
+                        <h1>Statistics</h1>
+                            <pre>Name: { this.state.name }</pre>
+                        <pre>Age: { this.state.age }</pre>
+
+
+                        <button onClick={ this.handleOnClick }>on click</button>
+                        <button onMouseOver= { this.handleOnMouseOver }>on hover</button>
+
+
+                        <p onCopy={ this.handleOnCopy }>Some sentence come here</p>
+
                     </div>
                 )
             }
