--- a/complete-react-tutorial/index.html
+++ b/complete-react-tutorial/index.html
@@ -18,25 +18,18 @@
                 age: 28
             };
 
-            handleOnClick = (e) => {
-                // console.log(e.target);
-                console.log(this.state);
-            };
-
-            handleOnMouseOver = (e) => {
-                console.log(e.pageX, e.pageY);
-            };
-
-            handleOnCopy = (e) => {
-                console.log("copy invoked");
-            };
-
-            changeName = (e) => {
+            handleOnChange = (e) => {
                 this.setState({
-                    name: 'Chris',
-                    age: 22
-                }, null /* because of webstorm to stop highlighting a callback */)
+                    name: e.target.value
+                });
             };
+
+            handleOnSubmit = (e) => {
+                e.preventDefault();
+                const data = new FormData(e.target);
+                console.log(data);
+            };
+
 
             render(){
                 return(
@@ -44,14 +37,13 @@
                         <h1>Statistics</h1>
                             <pre>Name: { this.state.name }</pre>
                         <pre>Age: { this.state.age }</pre>
+                        <form onSubmit={ this.handleOnSubmit }>
+                            <input type="text" onChange={ this.handleOnChange } />
+                            <button>OK</button>
+
+                        </form>
 
 
-                        <button onClick={ this.handleOnClick }>on click</button>
-                        <button onMouseOver= { this.handleOnMouseOver }>on hover</button>
-                        <button onClick= { this.changeName }>change name</button>
-
-
-                        <p onCopy={ this.handleOnCopy }>Some sentence come here</p>
 
                     </div>
                 )
